@@ -1,3 +1,2 @@
 #pragma once
-
-#define VERSION_STRING "1.0.10"
+#define VERSION_STRING "1."
